# authentication-service

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: secrets
helm/templates/: secret.yaml
helm/values/: test.yaml
kuzora-auth/: Chart.yaml  values.yaml
kuzora-auth/values/: test.yaml
manifests/: configMap.yml  deployment.yml  job.yml  secret.yml  service.yml
src/app/: config.py  in_memory_repository.py  main.py  service.py
src/app/api/: handlers.py
src/app/api/healthz/: handlers.py
src/app/core/: __init__.py  authentication.py  config.py  errors.py  interfaces.py  models.py
src/app/core/config/: __init__.py  auth_models.py  config.py  models.py  settings_models.py
src/app/metrics/: metrics.py  tracing.py
src/app/middleware/: __init__.py  middleware.py
src/config/: config-compose.yml  config-kube.yml  config-local.yml
src/tests/: test_main.py
src/tests/integration/: __init__.py  conftest.py  test_authenticate.py  test_handlers.py  test_main.py  test_serivce.py  test_service_in_mem_repo.py
src/tests/unit/: conftest.py  test_in_memory_repository.py  test_service_priv_func.py  test_service_pub_func.py
src/tests/unit/api/: __init__.py
src/tests/unit/core/: test_authenticate.py  test_config.py  test_service_priv_func.py  test_service_pub_func.py  test_settings_config.py
