[tool.poetry]
name = "authentification-service"
version = "0.1.0"
description = ""
authors = ["Georgiy Kuzora <georgiy@kuzora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyJWT = "^2.8.0"
passlib = {extras=["bcrypt"], version="^1.7.4"}
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
mypy = "^1.10.1"
types-passlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
