[tool.poetry]
name = "authentification-service"
version = "0.3.0"
description = ""
authors = ["Georgiy Kuzora <georgiy@kuzora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyJWT = "^2.8.0"
passlib = {extras=["bcrypt"], version="^1.7.4"}
python-dotenv = "^1.0.1"
fastapi = "0.111.1"
pydantic-settings = "2.3.4"
pyyaml = "6.0.1"
python-multipart = "0.0.9"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
mypy = "^1.10.1"
types-passlib = "*"
coverage = "*"
coverage-conditional-plugin = "*"
pytest-cov = "*"
anyio = { version = "^4.4.0", extras = ["trio"] }
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
