[tool.poetry]
name = "authentification-service"
version = "0.5.0"
description = ""
authors = ["Georgiy Kuzora <georgiy@kuzora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyJWT = "^2.8.0"
passlib = {extras=["bcrypt"], version="^1.7.4"}
python-dotenv = "^1.0.1"
fastapi = "0.111.1"
pydantic-settings = "2.3.4"
pyyaml = "6.0.1"
python-multipart = "0.0.9"
aiokafka = "0.11.0"
brotli = "1.1.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
mypy = "^1.10.1"
types-passlib = "*"
coverage = "*"
coverage-conditional-plugin = "*"
pytest-cov = "*"
anyio = { version = "^4.4.0", extras = ["trio"] }
pytest-asyncio = "*"
types-PyYAML = "^6.0.12.20240808"
nest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
